[project]
name = "js-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "beautifulsoup4>=4.13.5",
    "boto3>=1.40.39",
    "fastapi>=0.117.1",
    "httpx[http2]>=0.28.1",
    "jsonschema>=4.25.1",
    "microdata>=0.8.0",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.11.0",
    "pyld>=2.0.4",
    "rdflib>=7.2.1",
    "selectolax>=0.3.34",
    "streamlit>=1.50.0",
    "tenacity>=9.1.2",
    "tldextract>=5.3.0",
    "uvicorn[standard]>=0.37.0",
]
